2007-04-17  Ben Motmans  <ben.motmans@gmail.com>

	* gtk/Widget.custom:
	StyleGetPropertyValue that returns a GLib.Value when StyleGetProperty cannot automatically cast the GLib.Value (eg: Gdk.Color)
	[Fixes #81253]
	* doc/en/Gtk/Widget.xml:
	Documentation for the new StyleGetPropertyValue method and improved documentation for StyleGetProperty
	* gtk/TreeView.custom:
	OddRowColor and EvenRowColor properties
	* doc/en/Gtk/TreeView.xml:
	documentation for OddRowColor and EvenRowColor properties

2007-04-12  Brad Taylor  <brad@getcoded.net>
	
	* doc/en/Gtk/Widget.xml: Documentation for OnActivate, but only because
	Mike asked so nicely.

2007-04-12  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : do the Timeout switch in the finalizer
	instead of in Dispose, where it can cause problems if people
	override Dispose.
	* generator/ObjectGen.cs : don't generate finalizers for every
	subclass, just rely on the ~GLib.Object implementation.

2007-04-12  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs :
	* glib/Timeout.cs : don't add the CDeclCallback attr to the
	public delegate type, since it causes a MissingMethod exception
	on win32.

2007-04-09  Brad Taylor  <brad@getcoded.net>

	* gtk/glue/widget.c:
	* gtk/Widget.custom: Bind activate_signal in GtkWidgetClass.
	[Fixes #81343]

2007-04-05  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs : flush a few leftover changes from a
	ToggleRef refinement.

2007-03-15  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : generate try/catch blocks for
	native to managed marshallers.  [Fixes the rest of #80516]

2007-03-08  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs : guard against NULL gchandles.
	* gdk/Input.custom : add try/catch blocks to native callbacks.
	* gtk/*.custom : ditto
	* gtk/NodeStore.cs : ditto

2007-03-08  Mike Kestner  <mkestner@novell.com>

	* glib/*.cs : add try/catch blocks to native callback
	methods for DestroyNotify, Copy/Free, and ToggleNotify handlers.  