@@ -2956,23 +2956,6 @@ or <see cref="T:GLib.Object" />.</returns>
         <since version="Gtk# 2.4" />
       </Docs>
     </Member>
-    <Member MemberName="StyleGetPropertyValue">
-      <MemberSignature Language="C#" Value="internal GLib.Value StyleGetPropertyValue (string property_name);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.Value</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="property_name" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>Obtains the value of a style property of <paramref name="widget" />.</summary>
-        <param name="property_name">The name of a style property.</param>
-        <remarks>This method should only be used in certain scenarios where <see cref="M:Gtk.Widget.StyleGetProperty" /> fails, for example: when the GLib.Value contains a <see cref="T:Gdk.Color" />.</remarks>
-        <returns>A <see cref="T:GLib.Value" /> instance. When the instance is no longer needed, Dispose() must be invoked.</returns>
-        <since version="Gtk# 2.10" />
-      </Docs>
-    </Member>
     <Member MemberName="HasScreen">
       <MemberSignature Language="C#" Value="public bool HasScreen { get; };" />
       <MemberType>Property</MemberType>
