@@ -1,5 +1,10 @@
 2007-04-17  Ben Motmans  <ben.motmans@gmail.com>
 
+	* doc/en/Gtk/Widget.xml:
+	removed documentation for internal method
+
+2007-04-17  Ben Motmans  <ben.motmans@gmail.com>
+
 	* gtk/Widget.custom:
 	StyleGetPropertyValue that returns a GLib.Value when StyleGetProperty cannot automatically cast the GLib.Value (eg: Gdk.Color)
 	[Fixes #81253]
